refactor: adopt Java 25 idioms in embedding code
- PromptedEmbeddingService: batching via IntStream + Gatherers.windowFixed instead of manual
  index loops and boxed arrays
- OnnxTextEmbedder: pattern-matching switch on the ONNX output value, SequencedCollection
  getLast() for output selection, stream-based max sequence length
- Hashes: getFirst() for sidecar lines (user change)

Verified: ./gradlew clean build (15 tests), test -PincludeTags=model,e2e (8 tests).

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01FmUWsffyJtUsc6dgdtbVzQ